k8s/reviews-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reviews-service
  labels:
    app: reviews-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: reviews-service
  template:
    metadata:
      labels:
        app: reviews-service
    spec:
      containers:
        - name: reviews-service
          image: 730335426966.dkr.ecr.us-east-1.amazonaws.com/bookstore/reviews-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5002
          readinessProbe:
            httpGet:
              path: /health
              port: 5002
            initialDelaySeconds: 10
            periodSeconds: 15

---
apiVersion: v1
kind: Service
metadata:
  name: reviews-service
spec:
  type: ClusterIP
  selector:
    app: reviews-service
  ports:
    - protocol: TCP
      port: 5002
      targetPort: 5002
