k8s/users-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-service
  labels:
    app: users-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: users-service
  template:
    metadata:
      labels:
        app: users-service
    spec:
      containers:
        - name: users-service
          image: users-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5004
          readinessProbe:
            httpGet:
              path: /health
              port: 5004
            initialDelaySeconds: 10
            periodSeconds: 15

---
apiVersion: v1
kind: Service
metadata:
  name: users-service
spec:
  type: ClusterIP
  selector:
    app: users-service
  ports:
    - protocol: TCP
      port: 5004
      targetPort: 5004
